--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
+		"autoprefixer": "^10.3.7",
+		"cssnano": "^5.0.8",
 		"eslint": "^8.2.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"postcss": "^8.3.9",
+		"postcss-load-config": "^3.1.0",
 		"prettier": "^2.3.2",
 		"prettier-plugin-svelte": "^2.3.1",
-		"svelte": "^3.38.3"
+		"svelte": "^3.38.3",
+		"svelte-preprocess": "^4.9.8",
+		"tailwindcss": "^3.0.0",
+		"typescript": "^4.5.4"
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^1.27.0",
