--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.3.7",
 		"cssnano": "^5.0.8",
+		"daisyui": "^1.16.5",
 		"eslint": "^8.2.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
@@ -23,6 +24,7 @@
 		"svelte": "^3.38.3",
 		"svelte-preprocess": "^4.9.8",
 		"tailwindcss": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.0",
 		"typescript": "^4.5.4"
 	},
 	"dependencies": {
