--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,7 +4,7 @@
     "start_url": "/",
     "icons": [
       {
-        "src": "logo_512.png",
+        "src": "icon.png",
         "type": "image/png",
         "sizes": "512x512"
       }
